app/app/assets/stylesheets/uswds-overrides.scss
@forward "uswds";
@use "uswds" as *;

.usa-alert__heading {
  line-height: 1.2 !important;
}

.usa-accordion .usa-accordion__button {
  line-height: 1 !important;
}

.usa-hint p {
  margin: 3px 0;
}

// Form styles
.usa-form .usa-button {
  margin: units(4) 0;

  @include at-media("mobile-lg") {
    margin: units(5) 0;
  }
}

.usa-date-picker__calendar {
  top: 48px !important;
  max-width: none;
}

// Responsive heading adjustments for mobile
@include at-media-max('tablet') {
  h1 {
    @include u-font-size("sans", 11);
  }
  h2 {
    @include u-font-size("sans", 9);
  }
  h3 {
    @include u-font-size("sans", 8);
  }
}

// Make the navbar a bit taller on mobile, and increase the size of the "Menu"
// button to compensate.
$mobile-navbar-height: 4rem;
@include at-media-max($theme-header-min-width) {
  .usa-navbar {
    height: $mobile-navbar-height;
  }
  .usa-menu-btn {
    @include u-padding-x(2);
    height: $mobile-navbar-height;
  }
}
.usa-nav__primary {
  flex-shrink: 0;
}
.maxw-half {
  max-width: 50%;
}
.box-shadow-gray {
  box-shadow: inset 0 0 0 1px color("base-light");
}
.pointer-events-none {
  pointer-events: none;
}
.usa-input--disabled {
  opacity: 0.5;
  background-color: color("base-lightest");
}

/* *****************************************************************************
 Tables
 **************************************************************************** */
$table-width: 44rem;
.usa-table {
  max-width: $table-width;
  border: units(1px) solid color("ink");

  @include at-media("tablet") {
    th {
      width: 50%;
    }
  }

  tbody tr {
    border-bottom: units(1px) solid color("ink");

    &:last-child {
      border-bottom: none;
    }
  }

  @include at-media-max("mobile-lg") {
    thead {
      display: none;
    }
  }
}

.usa-table.usa-table--borderless thead th {
  background-color: color("blue-cool-5");
  border-bottom: units(1px) solid color("ink");
}

tr td:first-child {
  font-weight: bold;
}

/* *****************************************************************************
 * Helper classes
 **************************************************************************** */
.maxw-table {
  // USWDS-style helper for making other things the same size as a standard <table>
  max-width: $table-width;
}

@include at-media-max('mobile-lg') {
  .mobile-text-center {
    text-align: center;
  }
}

